--- a/Ovning4/css/master.css
+++ b/Ovning4/css/master.css
@@ -1,3 +1,12 @@
+.backButton {
+  position: fixed;
+  top: 40px;
+  font-size: 24px;
+  color: white;
+  text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+  margin-left: 40px;
+}
+
 * {
   margin: 0;
 }
