--- a/Ovning5/css/css.css
+++ b/Ovning5/css/css.css
@@ -23,3 +23,12 @@ body {
 .highlight {
   background: #f1c40f;
 }
+
+.backButton {
+  position: absolute;
+  top: 40px;
+  font-size: 24px;
+  color: white;
+  text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+  margin-left: 40px;
+}
