--- a/Ovning2/css/css.css
+++ b/Ovning2/css/css.css
@@ -53,3 +53,18 @@ h1 {
   text-shadow: 2px 2px black;
   margin-bottom: 60px;
 }
+
+.backButton {
+  margin-left: -50%;
+  text-align: center;
+  width: 100%;
+  position: fixed;
+  top: 0;
+  height: 70px;
+  line-height: 70px;
+  font-family: 'Audiowide', cursive;
+  background: rgba(30, 30, 30, 0.5);
+  font-size: 24px;
+  color: white;
+  text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+}
