--- a/Ovning4/css/master.css
+++ b/Ovning4/css/master.css
@@ -1,12 +1,3 @@
-.backButton {
-  position: fixed;
-  top: 40px;
-  font-size: 24px;
-  color: white;
-  text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
-  margin-left: 40px;
-}
-
 * {
   margin: 0;
 }
@@ -218,8 +209,35 @@ div img {
   display: inline-block;
 }
 
-.stickgoddamnit {
-  top: 10px;
+.sticky {
+  height: 100px;
+  width: 100px;
+  background: black;
+}
+
+.backButton {
+  text-align: center;
+  width: 100%;
+  height: 70px;
+  line-height: 70px;
+  font-family: 'Audiowide', cursive;
+  background: rgba(30, 30, 30, 0.5);
+  font-size: 24px;
+  color: white;
+  text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+}
+
+.index {
+  position: fixed;
+  top: 50px;
+}
+
+.backButtonBox {
+  z-index: 1;
+}
+
+.Gallery {
   position: sticky;
-  height: auto;
+  top: 0px;
+  z-index: 1;
 }
