--- a/Ovning5/css/css.css
+++ b/Ovning5/css/css.css
@@ -25,10 +25,15 @@ body {
 }
 
 .backButton {
-  position: absolute;
-  top: 40px;
+  text-align: center;
+  width: 100%;
+  position: fixed;
+  top: 0;
+  height: 70px;
+  line-height: 70px;
+  font-family: 'Audiowide', cursive;
+  background: rgba(30, 30, 30, 0.5);
   font-size: 24px;
   color: white;
   text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
-  margin-left: 40px;
 }
