--- a/Ovning4/css/master.css
+++ b/Ovning4/css/master.css
@@ -225,19 +225,23 @@ div img {
   font-size: 24px;
   color: white;
   text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+  top: 0;
+  position: sticky;
+  display: block;
+  z-index: 1;
+  margin-bottom: 10px;
 }
+
+.backButton:hover {
+  color: rgb(35, 82, 124);
+}
+
 
 .index {
   position: fixed;
   top: 50px;
 }
 
-.backButtonBox {
-  z-index: 1;
-}
-
-.Gallery {
-  position: sticky;
-  top: 0px;
-  z-index: 1;
+.backButtonTXT {
+  text-align: center;
 }
